--- a/ITPCfSQL.Azure.CLR/ITPCfSQL.Azure.CLR.csproj
+++ b/ITPCfSQL.Azure.CLR/ITPCfSQL.Azure.CLR.csproj
@@ -71,6 +71,9 @@
     <None Include="SQL.Scripts\Creation.sql" />
     <None Include="SQL.Scripts\Delete.sql" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="SQL.Scripts\SampleExecution.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
