--- a/ITPCfSQL.Azure.CLR/ITPCfSQL.Azure.CLR.csproj
+++ b/ITPCfSQL.Azure.CLR/ITPCfSQL.Azure.CLR.csproj
@@ -48,9 +48,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CallbackSupport\DeploymentsPersistentVMRolesWithInputEndpoints.cs" />
     <Compile Include="BlobStorage.cs" />
     <Compile Include="AzureBlob.cs" />
     <Compile Include="Configuration\EmbeddedConfiguration.cs" />
+    <Compile Include="Management.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue.cs" />
     <Compile Include="Table.cs" />
