--- a/ITPCfSQL.Azure/ITPCfSQL.Azure.csproj
+++ b/ITPCfSQL.Azure/ITPCfSQL.Azure.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Internal\Constants.cs" />
     <Compile Include="Internal\Management.cs" />
     <Compile Include="Management\Deployment.cs" />
+    <Compile Include="Management\Operation.cs" />
     <Compile Include="Management\Services.cs" />
     <Compile Include="Responses\CopyBlobResponse.cs" />
     <Compile Include="Internal\InternalMethods.cs" />
