--- a/ITPCfSQL.Azure.CLR/ITPCfSQL.Azure.CLR.csproj
+++ b/ITPCfSQL.Azure.CLR/ITPCfSQL.Azure.CLR.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Management.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue.cs" />
+    <Compile Include="Streaming\Enumerator.cs" />
+    <Compile Include="Streaming\Stream.cs" />
     <Compile Include="Table.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
