--- a/ITPCfSQL.Azure/ITPCfSQL.Azure.csproj
+++ b/ITPCfSQL.Azure/ITPCfSQL.Azure.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Exceptions\AzureException.cs" />
     <Compile Include="Exceptions\UnexpectedResponseTypeCodeException.cs" />
     <Compile Include="Internal\Constants.cs" />
+    <Compile Include="Internal\JSON\InternalMethods.cs" />
     <Compile Include="Internal\Management.cs" />
     <Compile Include="Management\Deployment.cs" />
     <Compile Include="Management\Operation.cs" />
@@ -84,6 +85,11 @@
     <Compile Include="Responses\GetBlobPropertyResponse.cs" />
     <Compile Include="Responses\LeaseBlobResponse.cs" />
     <Compile Include="SharedAccessSignature\Signature.cs" />
+    <Compile Include="Streaming\LineStreamer.cs" />
+    <Compile Include="Streaming\Enumerators\LineStreamerEnumerator.cs" />
+    <Compile Include="Streaming\Streamer.cs" />
+    <Compile Include="Streaming\Enumerators\XMLPlainLevelEnumerator.cs" />
+    <Compile Include="Streaming\XMLPlainLevelStreamer.cs" />
     <Compile Include="Table.cs" />
     <Compile Include="TableEntity.cs" />
   </ItemGroup>
