--- a/ITPCfSQL.Azure.CLR/ITPCfSQL.Azure.CLR.csproj
+++ b/ITPCfSQL.Azure.CLR/ITPCfSQL.Azure.CLR.csproj
@@ -56,7 +56,6 @@
     <Compile Include="Management.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue.cs" />
-    <Compile Include="Streaming\Enumerator.cs" />
     <Compile Include="Streaming\Stream.cs" />
     <Compile Include="Table.cs" />
     <Compile Include="Utils.cs" />
@@ -80,9 +79,11 @@
     <None Include="SQL.Scripts\Delete.sql" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="SQL.Scripts\BackupToAzure.sql" />
-    <Content Include="SQL.Scripts\SampleExecution.sql" />
+    <Content Include="SQL.Scripts\Demo\BackupToAzure.sql" />
+    <Content Include="SQL.Scripts\Demo\SampleExecution.sql" />
+    <Content Include="SQL.Scripts\Demo\Streaming.sql" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
