--- a/Test.Console/Test.Console.csproj
+++ b/Test.Console/Test.Console.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestBuffering.cs" />
     <Compile Include="TestQueueACL.cs" />
     <Compile Include="TestStreaming.cs" />
     <Compile Include="TestTable.cs" />
