--- a/Test.Console/Test.Console.csproj
+++ b/Test.Console/Test.Console.csproj
@@ -46,6 +46,7 @@
     <Compile Include="TestBuffering.cs" />
     <Compile Include="TestEventTimeNormalizer.cs" />
     <Compile Include="TestQueueACL.cs" />
+    <Compile Include="TestScatter.cs" />
     <Compile Include="TestStreaming.cs" />
     <Compile Include="TestTable.cs" />
   </ItemGroup>
