--- a/ITPCfSQL.Azure/ITPCfSQL.Azure.csproj
+++ b/ITPCfSQL.Azure/ITPCfSQL.Azure.csproj
@@ -68,11 +68,16 @@
     <Compile Include="Exceptions\AzureException.cs" />
     <Compile Include="Exceptions\UnexpectedResponseTypeCodeException.cs" />
     <Compile Include="Internal\Constants.cs" />
+    <Compile Include="Internal\InternalResourceGroups.cs" />
     <Compile Include="Internal\JSON\InternalMethods.cs" />
+    <Compile Include="Internal\InternalSQLDatabase.cs" />
     <Compile Include="Internal\Management.cs" />
     <Compile Include="Management\Deployment.cs" />
     <Compile Include="Management\Operation.cs" />
     <Compile Include="Management\Services.cs" />
+    <Compile Include="Responses\SQLDatabase\ListDatabases\Response.cs" />
+    <Compile Include="Responses\SQLDatabase\ListServers\ResponseWithGeneric.cs" />
+    <Compile Include="Responses\SQLDatabase\ListServers\ResponseWithoutGeneric.cs" />
     <Compile Include="TimeNormalization\DateValuePair.cs" />
     <Compile Include="TimeNormalization\Scatter\EvenlyDistribute.cs" />
     <Compile Include="TimeNormalization\Scatter\RandomScatter.cs" />
@@ -102,7 +107,9 @@
   <ItemGroup>
     <None Include="tempKey.snk" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Responses\Management\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
